# spel

./: build.sh  makefile  meson.build  todo
net/: api.h  client.c  draw.c  draw.h  server.c
res/: atlas.frag  atlas.frag.spv  atlas.vert  atlas.vert.spv  color.frag  color.frag.spv  color.vert  color.vert.spv  frag.frag  frag.frag.spv  res  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  vert.vert  vert.vert.spv
src/ctti/: ctti.c  lexer.c  parser.c
src/debug/: debug.c
src/game/: game.c  meson.build
src/include/shared/: api.h  color.h  ctti.h  input.h  math.h  mem.h  pack_rectangles.h  quicksort.h  stack_allocator.h  types.h
src/loader/: glfw_input.c  loader.c  main.c  meson.build
src/loader/platform/: platform.h  unix.c
src/renderer/: meson.build  renderer.c
src/renderer/src/: renderer.c
src/renderer/vkc/: context.c  physical_device.c  pipeline.c  utility.c  utility.h  vkc.c  vkc.h  vkc_command_buffer.c  vkc_framebuffer.c  vkc_graphics_pipeline.c  vkc_instance.c  vkc_logical_device.c  vkc_physical_device.c  vkc_renderpass.c  vkc_swapchain.c  vkc_util.c
